--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Xiaohan Zou's portfolio in macOS style."
+      content="mkswagger's Portfolio in macOS Style."
     />
 
     <link rel="icon" href="/logo/favicon.svg" />
@@ -17,7 +17,7 @@
     -->
     <link rel="manifest" href="/manifest.json" />
 
-    <title>Xiaohan Zou's Portfolio</title>
+    <title>mkswagger's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
