--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       content="mkswagger's Portfolio in macOS Style."
     />
 
-    <link rel="icon" href="/logo/favicon.svg" />
-    <link rel="apple-touch-icon" href="/logo/logo192.png" />
+    <link rel="icon" href="/logo/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
